chore: added bulk upserts for deals and create for tickets
